compiling_error.txt
H:\Documents\Assignments\Ass85.cpp: In function 'int main()':
H:\Documents\Assignments\Ass85.cpp:73:23: error: too few arguments to function 'void genPos(int*, std::__cxx11::string (*)[16], int*)'
     genPos(mouse, maze);
                       ^
H:\Documents\Assignments\Ass85.cpp:47:6: note: declared here
 void genPos (int arr[2], string m[10][16], int n[2])
      ^~~~~~
H:\Documents\Assignments\Ass85.cpp:76:29: error: too few arguments to function 'void play(int*, int*, std::__cxx11::string (*)[16], std::vector<int [2]>)'
     play(mouse, cheese, maze);
                             ^
H:\Documents\Assignments\Ass85.cpp:52:6: note: declared here
 void play (int m[2], int c[2], string maze[10][16], vector<int[2]> moves)
      ^~~~
